Bug 209350 - Choosing Last.fm similar artists as dynamic playlist provider is not saved
Summary: Choosing Last.fm similar artists as dynamic playlist provider is not saved
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Dynamic Playlists (other bugs)
Version First Reported In: 2.3-GIT
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 225156 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-10-04 00:38 UTC by Dennis Schridde
Modified: 2010-02-01 21:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Schridde 2009-10-04 00:38:48 UTC
Version:           2.2.0 (using KDE 4.3.1)
Compiler:          gcc 4.4.1 Gentoo 4.4.1 p1.0
OS:                Linux
Installed from:    Gentoo Packages

When I choose userdefined as dynamic playlist criterium, choose Last.fm as provider, press save, switch to random playlist, and back to my just saved playlist, the Echo Nest provider is selected instead of Last.fm.
Comment 1 Mikko C. 2009-10-04 08:37:03 UTC
confirmed here with git master.
There was a similar problem some times ago that was related to some xml. Can you take a look Leo?
Comment 2 Leo Franchi 2009-10-22 05:35:40 UTC
fixed in rev. 0caec033426ee723e827ca9a586af491863bc0c2
Comment 3 Mark Kretschmann 2009-10-28 17:45:58 UTC
Not fixed. In fact it crashes instantly:


Thread 1 (Thread 0x7fa5824e07a0 (LWP 2467)):
[KCrash Handler]
#5  0x00007fa5818a30aa in CustomBiasEntryWidget (this=0x482fd40, bias=0x1d321d0, parent=0x1a5c090) at /home/mark/kde/src/amarok/src/dynamic/CustomBiasEntryWidget.cpp:74
#6  0x00007fa58189ed8e in Dynamic::CustomBias::widget (this=0x1d321d0, parent=0x1a5c090) at /home/mark/kde/src/amarok/src/dynamic/CustomBias.cpp:57
#7  0x00007fa58192caad in PlaylistBrowserNS::DynamicBiasModel::appendBias (this=0x1a5de30, b=0x1d321e0) at /home/mark/kde/src/amarok/src/browsers/playlistbrowser/DynamicBiasModel.cpp:172
#8  0x00007fa58192c8ff in PlaylistBrowserNS::DynamicBiasModel::appendCustomBias (this=0x1a5de30) at /home/mark/kde/src/amarok/src/browsers/playlistbrowser/DynamicBiasModel.cpp:150
#9  0x00007fa5816d8414 in PlaylistBrowserNS::DynamicBiasModel::qt_metacall (this=0x1a5de30, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7ffffe6b1e10)
    at /home/mark/kde/build/amarok/src/moc_DynamicBiasModel.cpp:87
#10 0x00007fa57fa4eddc in QMetaObject::activate (sender=0x47a5450, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x1) at kernel/qobject.cpp:3113
#11 0x00007fa581934273 in PlaylistBrowserNS::BiasAddWidget::addBias (this=0x47a5450) at /home/mark/kde/build/amarok/src/DynamicBiasWidgets.moc:145
#12 0x00007fa58192ed03 in PlaylistBrowserNS::BiasAddWidget::slotClicked (this=0x47a5450) at /home/mark/kde/src/amarok/src/browsers/playlistbrowser/DynamicBiasWidgets.cpp:143
#13 0x00007fa58193423c in PlaylistBrowserNS::BiasAddWidget::qt_metacall (this=0x47a5450, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7ffffe6b1ff0)
    at /home/mark/kde/build/amarok/src/DynamicBiasWidgets.moc:134
#14 0x00007fa57fa4eddc in QMetaObject::activate (sender=0x2201520, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x1) at kernel/qobject.cpp:3113
#15 0x00007fa580bcc8e7 in QAbstractButton::clicked (this=0x1d321d0, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#16 0x00007fa58092e41b in QAbstractButtonPrivate::emitClicked (this=0x4742ff0) at widgets/qabstractbutton.cpp:543
#17 0x00007fa58093002b in QAbstractButtonPrivate::click (this=0x4742ff0) at widgets/qabstractbutton.cpp:536
#18 0x00007fa580930275 in QAbstractButton::mouseReleaseEvent (this=0x2201520, e=0x7ffffe6b2720) at widgets/qabstractbutton.cpp:1115
#19 0x00007fa5809fecba in QToolButton::mouseReleaseEvent (this=0x1d321d0, e=0x0) at widgets/qtoolbutton.cpp:709
#20 0x00007fa5806199c0 in QWidget::event (this=0x2201520, event=0x7ffffe6b2720) at kernel/qwidget.cpp:7549
#21 0x00007fa5805caefc in QApplicationPrivate::notify_helper (this=0xafc500, receiver=0x2201520, e=0x7ffffe6b2720) at kernel/qapplication.cpp:4056
#22 0x00007fa5805d2011 in QApplication::notify (this=<value optimized out>, receiver=0x2201520, e=0x7ffffe6b2720) at kernel/qapplication.cpp:3758
#23 0x00007fa58205dab6 in KApplication::notify (this=0x7ffffe6b45e0, receiver=0x2201520, event=0x7ffffe6b2720) at ../../kdeui/kernel/kapplication.cpp:302
#24 0x00007fa57fa39c2c in QCoreApplication::notifyInternal (this=0x7ffffe6b45e0, receiver=0x2201520, event=0x7ffffe6b2720) at kernel/qcoreapplication.cpp:610
#25 0x00007fa5805d18e0 in QCoreApplication::sendSpontaneousEvent (receiver=0x2201520, event=0x7ffffe6b2720, alienWidget=0x2201520, nativeWidget=0x10666a0, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#26 QApplicationPrivate::sendMouseEvent (receiver=0x2201520, event=0x7ffffe6b2720, alienWidget=0x2201520, nativeWidget=0x10666a0, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at kernel/qapplication.cpp:2924
#27 0x00007fa580637a0e in QETWidget::translateMouseEvent (this=0x10666a0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4409
#28 0x00007fa580636aa9 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7ffffe6b4250) at kernel/qapplication_x11.cpp:3550
#29 0x00007fa58065fd0c in x11EventSourceDispatch (s=<value optimized out>, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x00007fa57823cbbe in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#31 0x00007fa578240588 in ?? () from /lib/libglib-2.0.so.0
#32 0x00007fa5782406b0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#33 0x00007fa57fa621a6 in QEventDispatcherGlib::processEvents (this=0x9c0770, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#34 0x00007fa58065f4be in QGuiEventDispatcherGlib::processEvents (this=0x1d321d0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#35 0x00007fa57fa38532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#36 0x00007fa57fa38904 in QEventLoop::exec (this=0x7ffffe6b4580, flags=) at kernel/qeventloop.cpp:201
#37 0x00007fa57fa3aab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#38 0x0000000000405a70 in main (argc=4, argv=0x7ffffe6b63d8) at /home/mark/kde/src/amarok/src/main.cpp:227
The current source language is "auto; currently c".
Comment 4 Mark Kretschmann 2009-10-28 18:35:06 UTC
Fixed it:


commit 98e3bd34266de0dc2bc9953268219dd8452b4f56
Author: Mark Kretschmann <kretschmann@kde.org>
Date:   Wed Oct 28 18:34:16 2009 +0100

    Don't crash when adding a Custom Bias.

    BUG: 209350
Comment 5 Myriam Schweingruber 2010-02-01 21:48:50 UTC
*** Bug 225156 has been marked as a duplicate of this bug. ***
Comment 6 Leo Franchi 2010-02-01 21:54:18 UTC
should be fixed in trunk and 2.2.3