Don't crash when adding a Custom Bias.

BUG: 209350